# for display continuity sake please use 2 spaces instead of tabs

2015-07-12 mmichaud <m.michael.michaud@orange.fr>
  * improve .cpg handling for shapefile/dbf format
  * fix a bug with charset option (could be checked but not visible in "save dataset as" panel)

2015-07-03 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Added "Change Style" plugin to WMS Layers - currently only general transaprency and scale visibility 
    are available
  * Uniformed Plugin icon ("Palette.gif") and name ("Change Style") to Layer.class, RasterImage.class 
    and WMSLayer.class Styling plugins ( DeeChangeStylesPlugIn, WMSStylePlugIn and ChangeRasterPropertiesPlugIn
  * Rearranged Style access on the main toolbar, now, depending to selected layer (Layer, WMSLayer, RasterImageLayer),
    the plugin opens the conresponding style dialog

2015-06-28 mmichaud <m.michael.michaud@orange.fr>
  * SelectOneItemTool : fix #404 (could select a feature juset deleted)
  * Add 4 morphologic indices to GeometryAttributes plugin :
    - polygon width
    - polygon length
    - circularity (Miller)
    - compacity (Gravélius)

2015-06-26 bertazza
  * Raster styles: some bugs fixed.

2015-06-25 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Reorganized Select Item context menu: move some plugins to a new "Other tools" submenu
  * Add Measure Selected Features plugin to Select Items context menu>Other tools submenu
   
2015-06-24 mmichaud <m.michael.michaud@orange.fr>
  * AttributeTablePanel : simplify code, avoid useless selection clearing and avoid a
    recursive loop [could not reproduce a case where features can be deleted from the
    editing mode]

2015-06-23 bertazza
  * improved legend handling for rasters (via RasterStyler):
  * the legend is now integrated in the layer tree of the TOC

2015-06-23 mmichaud <m.michael.michaud@orange.fr>
  * fix bug #406 wrong message "layers not saved"
  * fix a bug in shapefile charset management (dbf field length was sometimes